# PriceCorrelator

./: .gitignore  DOCUMENTATION_INDEX.md  README.md  pyproject.toml
docs/: architecture.md  assumptions.md  cli_module.md  config_module.md  deploy_ubuntu_2204.md  event_client_module.md  lag_analyzer_module.md  models_module.md  monitor_module.md  operations.md  rollback_plan.md  rtds_client_module.md  strategy_module.md  tests.md
scripts/: price-correlator.service  rollback_to_lock.ps1  run_strategy.ps1  run_strategy.sh
src/price_correlator/: __init__.py  __main__.py  cli.py  clob_client.py  config.py  event_client.py  lag_analyzer.py  models.py  monitor.py  rtds_client.py  strategy.py
tests/: test_cli.py  test_event_client.py  test_integration_clob_client.py  test_integration_event_client_playwright.py  test_integration_monitor.py  test_integration_rtds_client.py  test_integration_strategy.py  test_lag_analyzer.py  test_monitor.py  test_rtds_client.py  test_strategy.py
